crates/connectors/ndc-citus/tests/snapshots/query_tests__native_queries__select_artist_with_album_by_title_relationship_arguments.snap
---
source: crates/connectors/ndc-citus/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "The Police",
        "albums": {
          "rows": [
            {
              "title": "The Police Greatest Hits"
            }
          ]
        }
      },
      {
        "Name": "The Rolling Stones",
        "albums": {
          "rows": []
        }
      },
      {
        "Name": "The Tea Party",
        "albums": {
          "rows": []
        }
      },
      {
        "Name": "The Who",
        "albums": {
          "rows": [
            {
              "title": "My Generation - The Very Best Of The Who"
            }
          ]
        }
      },
      {
        "Name": "Tim Maia",
        "albums": {
          "rows": []
        }
      },
      {
        "Name": "Titãs",
        "albums": {
          "rows": []
        }
      },
      {
        "Name": "Battlestar Galactica",
        "albums": {
          "rows": [
            {
              "title": "Battlestar Galactica: The Story So Far"
            }
          ]
        }
      }
    ]
  }
]
