crates/connectors/ndc-citus/tests/snapshots/query_tests__native_queries__select_sort_relationship.snap
---
source: crates/connectors/ndc-citus/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "title": "A Matter of Life and Death",
        "AlbumId": 94
      },
      {
        "title": "A Real Dead One",
        "AlbumId": 95
      },
      {
        "title": "A Real Live One",
        "AlbumId": 96
      },
      {
        "title": "Appetite for Destruction",
        "AlbumId": 90
      },
      {
        "title": "Album Of The Year",
        "AlbumId": 74
      }
    ]
  }
]
